[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/Collisions/Hurtbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Collisions/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Slime.gd" type="Script" id=3]
[ext_resource path="res://Assets/Mobs/Slime.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=67]
radius = 4.53192

[sub_resource type="Animation" id=54]
resource_name = "Death"
length = 0.65
tracks/0/type = "value"
tracks/0/path = NodePath("Milo:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 12, 14, 16, 18, 19, 21 ]
}

[sub_resource type="Animation" id=9]
resource_name = "Idle"
length = 2.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Milo:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.7, 1.1, 1.4, 1.8, 2.1, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 5, 6, 0, 6, 0, 1, 5 ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Milo:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3 ]
}

[sub_resource type="Animation" id=57]
resource_name = "Walk"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Milo:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 25, 27, 29, 31, 33 ]
}

[sub_resource type="RectangleShape2D" id=64]
extents = Vector2( 4.5, 3.5 )

[sub_resource type="GDScript" id=65]
script/source = "extends Area2D

var Knockback_vector = Vector2.ZERO
"

[sub_resource type="CircleShape2D" id=66]
radius = 5.52268

[node name="Slime" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 7
script = ExtResource( 3 )

[node name="HP" type="Sprite" parent="."]
position = Vector2( 0, -12 )
texture = ExtResource( 4 )
hframes = 5
vframes = 8
frame = 37

[node name="Milo" type="Sprite" parent="."]
texture = ExtResource( 4 )
hframes = 5
vframes = 8
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 0, 0.854902, 1, 1 )
position = Vector2( 0.495747, 0.499964 )
rotation = 0.00850626
shape = SubResource( 67 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 54 )
anims/Idle = SubResource( 9 )
anims/RESET = SubResource( 10 )
anims/Walk = SubResource( 57 )

[node name="Hurtbox" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0.5, 0.5 )
shape = SubResource( 64 )

[node name="Hitbox_Slime" parent="." instance=ExtResource( 2 )]
collision_layer = 4
collision_mask = 2
script = SubResource( 65 )

[node name="CollisionShape2D" parent="Hitbox_Slime" index="0"]
position = Vector2( 0.5, 0.5 )
shape = SubResource( 66 )

[node name="LineOfSight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 100, 0 )
collision_mask = 3

[node name="LineOfSight_DMG" type="RayCast2D" parent="." groups=["Enemy"]]
enabled = true
cast_to = Vector2( 30, 0 )
collision_mask = 2

[node name="Line2D" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( 13, -8 )
width = 1.0
default_color = Color( 1, 0.309804, 0.309804, 1 )

[node name="ATK_Countdown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ATK_Label" type="Label" parent="."]
visible = false
modulate = Color( 1, 0.188235, 0, 1 )
margin_left = 5.0
margin_top = -9.0
margin_right = 98.0
margin_bottom = 8.0
rect_min_size = Vector2( -0.001, 0 )
rect_scale = Vector2( 0.5, 0.5 )
text = "atk countdown"

[node name="Drop" type="Position2D" parent="."]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="ATK_Countdown" to="." method="_on_ATK_Countdown_timeout"]

[editable path="Hurtbox"]
[editable path="Hitbox_Slime"]
